<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_tama_o">Tamaño *</string>
    <string name="lbl_buscar">Buscar</string>
    <string name="msg_correo_electr_n">Correo electrónico *</string>
    <string name="msg_apellido_patern2">Apellido paterno</string>
    <string name="msg_embutidos_y_l_c">Embutidos y
lácteos</string>
    <string name="cantDinero">Cantidad a donar: </string>
    <string name="msg_quiero_donar_lo">QUIERO DONAR LO EQUIVALENTE A:</string>
    <string name="lbl_receta_6">Receta 6</string>
    <string name="msg_rescatamos_135">Rescatamos 135,504,773 kg de alimento
en 2021, del cual 51% son frutas y
verduras, y 49% no perecederos.
.</string>
    <string name="lbl_receta_5">Receta 5</string>
    <string name="msg_ayuda_a_los_que">Ayuda a los que más lo necesiten con tu tiempo y
talentos.</string>
    <string name="lbl_receta_4">Receta 4</string>
    <string name="lbl_otro">otro</string>
    <string name="msg_n_mero_telef_ni2">Número telefónico</string>
    <string name="lbl_donaciones">Donaciones</string>
    <string name="lbl_enviar_donaci_n">ENVIAR DONACIÓN</string>
    <string name="msg_apellido_matern">Apellido materno *</string>
    <string name="lbl_voluntariado">VOLUNTARIADO</string>
    <string name="lbl_recetas">Recetas</string>
    <string name="lbl_information">Información</string>
    <string name="lbl_en_el_mundo">EN EL MUNDO</string>
    <string name="lbl_en_mexico">EN MEXICO</string>
    <string name="lbl_en_la_red_bamx">EN LA RED BAMX</string>
    <string name="lbl_q_hacemos">¿QUÉ HACEMOS?</string>
    <string name="lbl_durazno">DURAZNO</string>
    <string name="lbl_recetas2">RECETAS</string>
    <string name="msg_ingresa_la_cant">Ingresa la cantidad que deseas donar</string>
    <string name="msg_estado_de_resid">Estado de residencia</string>
    <string name="lbl_fruta_y_verdura2">FRUTA Y VERDURA</string>
    <string name="lbl_durazno_1_kg">Durazno: 1 kg</string>
    <string name="msg_tipo_de_product">Tipo de producto</string>
    <string name="lbl_resumen">Resumen</string>
    <string name="lbl_verRecetas">Ver más</string>
    <string name="lbl_ingredientes">Ingredientes: </string>
    <string name="lbl_ingredientes2">Ingredientes: </string>
    <string name="lbl_preparacion">Preparación: </string>
    <string name="lbl_link">Link </string>
    <string name="lbl_1_000_00">$1,000.00</string>
    <string name="msg_1_3_de_lo_que_s">1/3 de lo que se produce en México se
desperdicia, esto equivale a 38
toneladas por minuto.
Alimento con el cual se podría nutrir a
las 28.6 millones de personas que
viven en carencia de alimentos.</string>
    <string name="msg_gracias_por_tu">¡Gracias por tu
donación!</string>
    <string name="lbl_manzana">MANZANA</string>
    <string name="lbl_receta_3">Receta 3</string>
    <string name="lbl_receta_2">Receta 2</string>
    <string name="lbl_favoritos2">FAVORITOS</string>
    <string name="lbl_receta_1">Receta 1</string>
    <string name="lbl_alimentos">ALIMENTOS</string>
    <string name="lbl_men">Menú</string>
    <string name="lbl_canasta_b_sica">CANASTA
BÁSICA</string>
    <string name="lbl_donDinero">DONACIÓN MONETARIA</string>
    <string name="lbl_jugo_de_naranja">Jugo de naranja</string>
    <string name="lbl_filtrar">Filtrar</string>
    <string name="msg_higiene_y_limpi">HIGIENE Y LIMPIEZA</string>
    <string name="lbl_manzana_1_kg">Manzana: 1 kg</string>
    <string name="msg_n_mero_telef_ni">Número telefónico *</string>
    <string name="msg_con_tu_aportaci">Con tu aportación nos ayudas a combatir el hambre
de miles de familias y la malnutrición en México.</string>
    <string name="msg_qu_desea_don">¿Qué desea
donar?</string>
    <string name="lbl_100_00">$100.00</string>
    <string name="lbl_tiempo">tiempo</string>
    <string name="lbl_producto">Producto</string>
    <string name="lbl_0">0</string>
    <string name="lbl_nombre_s2">Nombre(s)</string>
    <string name="lbl_nombre_s">Nombre(s) *</string>
    <string name="lbl_enviar">enviar</string>
    <string name="lbl_correct">modificar</string>
    <string name="msg_el_banco_de_ali">El Banco de Alimentos de México se
contactará contigo.</string>
    <string name="lbl_abarrotes">ABARROTES</string>
    <string name="msg_apellido_patern">Apellido paterno *</string>
    <string name="lbl_naranja">NARANJA</string>
    <string name="lbl_dinero">DINERO</string>
    <string name="lbl_donaci_n">DONACIÓN</string>
    <string name="lbl_qu_hacemos">¿QUÉ HACEMOS?</string>
    <string name="lbl_favoritos">Favoritos</string>
    <string name="lbl_chocomilk">Chocomilk</string>
    <string name="msg_higiene_limpi">hIGIENE &amp; LIMPIEZA</string>
    <string name="lbl_frutasYVerduras">Frutas y Verduras</string>
    <string name="lbl_no_perecederos">No perecederos</string>
    <string name="msg_apellido_matern2">Apellido materno</string>
    <string name="lbl_peras">PERAS</string>
    <string name="lbl_donar">dONAR</string>
    <string name="msg_se_desperdician">Se desperdician 1,300 millones de toneladas
Si las emiciones de gas de efecto
invernadero, generadas por el desperdicio
fuerna un país, serían el 3er país más
grande del mundo</string>
    <string name="lbl_cantidad">Cantidad *</string>
    <string name="lbl_comentarios">Comentarios</string>
    <string name="lbl_500_00">$500.00</string>
    <string name="msg_colonia_de_resi">Colonia de residencia</string>
    <string name="lbl_200_00">$200.00</string>
    <string name="lbl_fruta_y_verdura">Fruta
verdura</string>
    <string-array name="categorias">
        <item>Limpieza</item>
        <item>Detergente</item>
        <item>Uso personal</item>
    </string-array>
    <string name="lbl_ApellidoP">Apellido Paterno * </string>
    <string name="lbl_ApellidoM">Apellido Materno * </string>
    <string name="lbl_correo">Correo </string>
    <string name="lbl_num">Número telefónico</string>
    <string name="lbl_numT">Número telefónico *</string>
    <string name="lbl_estado">Estado de residencia *</string>
    <string name="item">Artículo seleccionado</string>
    <string name="ingrese">INGRESE SUS DATOS</string>
    <string name="lbl_canasta_basica">CANASTA BÁSICA</string>
    <string name="lbl_frutas_verduras">Frutas y Verduras</string>
    <string name="lbl_embutidos_y_lacteos">Embutidos y Lácteos</string>
    <string name="lbl_plus">+</string>
    <string name="lbl_minus">-</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menú</string>
    <string name="information">Información</string>
    <string name="correct">Modificar</string>

</resources>