<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:layout_marginTop="30dp">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEnviar2"
        style="@style/btnSolidRounded_2"
        android:layout_width="@dimen/_150pxh"
        android:layout_height="@dimen/_43pxv"
        android:layout_gravity="center_horizontal"
        android:ellipsize="end"
        android:gravity="center"
        android:letterSpacing="0.06"
        android:lineSpacingExtra="@dimen/_1pxh"

        android:singleLine="true"
        android:text="@string/lbl_verRecetas"
        android:textAllCaps="true"
        android:textAlignment="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="31dp"
        tools:text="@string/lbl_verRecetas" />

    <TextView
        android:id="@+id/receta_titulo"
        style="@style/etSolid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_bg_white_a700"
        android:drawableEnd="@drawable/img_favorite"
        android:drawablePadding="@dimen/_30pxh"
        android:ellipsize="end"
        android:hint="@string/lbl_receta_1"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="@dimen/_1pxh"
        android:orientation="vertical"
        android:paddingStart="@dimen/_12pxh"
        android:paddingTop="@dimen/_15pxv"
        android:paddingEnd="@dimen/_14pxh"
        android:paddingBottom="@dimen/_16pxv"
        android:singleLine="true"
        android:text="@string/lbl_recetas"
        android:textColorHint="@color/black_900_dd"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/receta_ingredientes"
        style="@style/etSolid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_bg_white_a700"
        android:drawablePadding="@dimen/_30pxh"
        android:ellipsize="end"
        android:hint="@string/lbl_receta_1"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="@dimen/_1pxh"
        android:paddingStart="@dimen/_12pxh"
        android:paddingTop="@dimen/_15pxv"
        android:paddingEnd="@dimen/_14pxh"
        android:paddingBottom="@dimen/_16pxv"
        android:singleLine="true"
        android:text="@string/lbl_recetas"
        android:textColorHint="@color/black_900_dd"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receta_titulo"
        tools:ignore="Autofill"
        android:orientation="vertical"/>


</androidx.constraintlayout.widget.ConstraintLayout>