<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="dineroVM" type="com.application.app.modules.dinero.data.viewmodel.DineroVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumnmask"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearDinero"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <FrameLayout android:gravity="start"
                android:id="@+id/frameSystembar"
                android:layout_height="@dimen/_29pxv"
                android:layout_width="match_parent" style="@style/groupStylegray_900_14">
                <ImageView android:id="@+id/imageMask"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_9pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="@dimen/_52pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_mask_black_900"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_mask_black_900"/>
            </FrameLayout>
            <FrameLayout android:gravity="start"
                android:id="@+id/frameStackbamxlogotwo"
                android:layout_height="@dimen/_70pxv" android:layout_width="match_parent">
                <ImageView android:id="@+id/imageBamxlogoTwo"
                    android:layout_gravity="bottom|end"
                    android:layout_height="@dimen/_64pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_62pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_bamxlogo2_16}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_bamxlogo2_16"/>
                <FrameLayout android:id="@+id/frameStackbamxlogotwoOne"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_70pxv" android:layout_width="match_parent">
                    <FrameLayout android:id="@+id/frameStackarrowleft"
                        android:layout_gravity="top|start"
                        android:layout_height="@dimen/_56pxv"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_width="match_parent" style="@style/groupStylebluegray_801">
                        <ImageView android:id="@+id/imageArrowleft"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_22pxh"
                            android:layout_marginBottom="@dimen/_16pxv"
                            android:layout_marginEnd="@dimen/_24pxh"
                            android:layout_marginStart="@dimen/_24pxh"
                            android:layout_marginTop="@dimen/_16pxv"
                            android:layout_width="@dimen/_26pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_arrowleft_white_a700"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_white_a700"/>
                    </FrameLayout>
                    <ImageView android:id="@+id/imageBamxlogoTwoOne"
                        android:layout_gravity="bottom|end"
                        android:layout_height="@dimen/_64pxh"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="@dimen/_62pxh"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_bamxlogo2_17}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_bamxlogo2_17"/>
                </FrameLayout>
            </FrameLayout>
            <TextView android:ellipsize="end" android:id="@+id/txtH5"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_31pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{dineroVM.dineroModel.txtH5}"
                style="@style/txt_1" tools:text="@string/lbl_voluntariado"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_31pxh"
                android:layout_marginTop="@dimen/_33pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:text="@{dineroVM.dineroModel.txtDescription}"
                style="@style/txtRobotoromanregular13" tools:text="@string/msg_con_tu_aportaci"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btn100Zero"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_31pxh"
                android:layout_marginTop="@dimen/_38pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.06"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:text="@string/lbl_100_00"
                android:textAllCaps="true"
                style="@style/btnSolidRounded_2" tools:text="@string/lbl_100_00"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btn200Zero"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_31pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.06"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:text="@string/lbl_200_00"
                android:textAllCaps="true"
                style="@style/btnSolidRounded_2" tools:text="@string/lbl_200_00"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btn500Zero"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_31pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.06"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:text="@string/lbl_500_00"
                android:textAllCaps="true"
                style="@style/btnSolidRounded_2" tools:text="@string/lbl_500_00"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btn1000Zero"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_31pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.06"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:text="@string/lbl_1_000_00"
                android:textAllCaps="true"
                style="@style/btnSolidRounded_2" tools:text="@string/lbl_1_000_00"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtH5One"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_31pxh"
                android:layout_marginTop="@dimen/_41pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{dineroVM.dineroModel.txtH5One}"
                style="@style/txt_2" tools:text="@string/msg_quiero_donar_lo"/>
            <TextView android:ellipsize="end" android:id="@+id/txtH5Two"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{dineroVM.dineroModel.txtH5Two}"
                style="@style/txt_3" tools:text="@string/msg_ingresa_la_cant"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_bluegray_101_radius_4"
                android:ellipsize="end" android:id="@+id/etBox"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_31pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={dineroVM.dineroModel.etBoxValue}"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnEnviarDonacinOne"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_41pxv"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_31pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="@dimen/_157pxh"
                android:letterSpacing="0.06"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_21pxh"
                android:paddingStart="@dimen/_21pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/lbl_enviar_donaci_n"
                android:textAllCaps="true"
                style="@style/btnSolidRounded_3" tools:text="@string/lbl_enviar_donaci_n"/>
        </LinearLayout>
        <FrameLayout android:gravity="center_horizontal"
            android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_1pxh" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linear2FourupAO"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylebluegray_802">
                <LinearLayout android:id="@+id/linear1Tab"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStylebluegray_800">
                    <ImageView android:id="@+id/imageHome"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_21pxh"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_width="@dimen/_30pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_home"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtCaption"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_11pxv"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.02"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@{dineroVM.dineroModel.txtCaption}"
                        style="@style/txtRobotoregular12" tools:text="@string/lbl_men"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearColumnvolume"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStylebluegray_800">
                    <LinearLayout android:id="@+id/linear3Tab"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="match_parent"
                        android:orientation="vertical" style="@style/groupStylebluegray_800">
                        <ImageView android:id="@+id/imageVolume"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_20pxh"
                            android:layout_marginTop="@dimen/_9pxv"
                            android:layout_width="@dimen/_20pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_volume"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_volume"/>
                        <TextView android:ellipsize="end"
                            android:gravity="center_horizontal"
                            android:id="@+id/txtCaptionOne"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_8pxv"
                            android:layout_marginEnd="@dimen/_2pxh"
                            android:layout_marginStart="@dimen/_2pxh"
                            android:layout_marginTop="@dimen/_3pxv"
                            android:layout_width="match_parent"
                            android:letterSpacing="0.02"
                            android:lineSpacingExtra="@dimen/_1pxh"
                            android:singleLine="true"
                            android:text="@{dineroVM.dineroModel.txtCaptionOne}"
                            style="@style/txtRobotoregular12_1" tools:text="@string/lbl_information"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
